<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learn From Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_letter">CreateLetterActivity</string>
    <string name="title_section1">Enter Personal Info</string>
    <string name="title_section2">Select Profile Picture</string>
    <string name="title_section3">Signature</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failedLetterSubmission">Please enter all information</string>
    <string name="title_activity_mailbox">MailboxActivity</string>
    <string name="title_letter_list">Letters</string>
    <string name="title_letter_detail">Letter Detail</string>
    <string name="title_activity_example">exampleActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_parse">ParseActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="testRecipient">To all cash strapped teenagers</string>
    <string name="testMessage">Save your money when you go to college,
        do not waste it on alcohol. Trust me on this one. You do not want to do this.</string>
    <string name="testSignature">first TEster</string>
    <string name="logInButtonText">Log In</string>
    <string name="logOutButtonText">Log out</string>
    <string name="disLikeButtonNormalText">Dislike</string>
    <string name="likeButtonNormalText">Like</string>
    <string name="votedOnButtonText">Voted</string>
    <string name="cofirmUserMessage">Yes</string>
    <string name="denyUserMessage">No</string>
    <string name="title_activity_main2">MainActivity</string>

</resources>
