<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/act_createLetter"
        android:icon="@drawable/ic_action_new_email"
        android:orderInCategory="1"
        android:title="create letter"
        android:showAsAction="always" />
</menu>